Gestion du caractère spécial "+" dans les identifiants d'utilisateur.